# kaatib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: UpdateSubmodules.cmake
kaatib/: AmrBayl.txt  CMakeLists.txt  kaatib.c  kaatib.h  main.c  menus.c  menus.h
test/: CMakeLists.txt  test_kaata.c  test_utx.c
tests/: CMakeLists.txt  test.txt  test_kaata.c  test_utx.c  test_wcString.c
utx/: CMakeLists.txt  string16.c  string16.h  utx.c  utx.def  utx.h  utx.hxx
